--- a/flyway/conf/local/flyway.conf
+++ b/flyway/conf/local/flyway.conf
@@ -1,4 +1,4 @@
 flyway.driver=org.postgresql.Driver
-flyway.url=jdbc:postgresql://database:5432/photoandgo
-flyway.user=photogo
+flyway.url=jdbc:postgresql://database:5432/sample
+flyway.user=root
 flyway.password=ukXxa
