--- a/flyway/conf/stg/flyway.conf
+++ b/flyway/conf/stg/flyway.conf
@@ -1,4 +1,4 @@
 flyway.driver=org.postgresql.Driver
-flyway.url=jdbc:postgresql://staging.cjtg2yvimmhr.us-east-1.rds.amazonaws.com:5432/photoandgo
-flyway.user=photogodev
+flyway.url=jdbc:postgresql://.us-east-1.rds.amazonaws.com:5432/
+flyway.user=root
 flyway.password=D6Zpx!Vz
